LHS alignment fix

--- a/public/src/main.scss
+++ b/public/src/main.scss
@@ -132,6 +132,7 @@ md-toolbar {
   line-height: 30px;
   width: auto;
   white-space: normal;
+  text-align: left; /*Added for LHS align center*/
 }
 
 h2 {
